include(GNUInstallDirs)
include_directories(.)

add_library(track STATIC track.c)

if (TRACK_CURL_SUPPORT)
  if(NOT UNIX)
    setup_curl()
    include_directories(${CMAKE_BINARY_DIR}/_deps/curl-src/include)
    set(CURL_LIBRARIES libcurl PARENT_SCOPE)
  else()
    find_package(CURL REQUIRED)
    if(CURL_FOUND)
      message(STATUS "Found CURL version: ${CURL_VERSION_STRING}")
      message(STATUS "Using CURL include dir(s): ${CURL_INCLUDE_DIRS}")
      message(STATUS "Using CURL lib(s): ${CURL_LIBRARIES}")
      include_directories(${CURL_INCLUDE_DIRS})
    else()
      message(FATAL_ERROR "Could not find CURL")
    endif()
  endif()
	add_library(track-curl STATIC track_curl.c)
  target_link_libraries(track-curl ${CURL_LIBRARIES})
else()
	add_definitions(-DTRACK_DISABLE_CURL_SUPPORT)
endif()

install(TARGETS track DESTINATION ${CMAKE_INSTALL_BINDIR})
